2003-06-18  Frederic Crozat  <fcrozat@mandrakesoft.com>

	* esd.c: (main): allow to set auto-standby to 0 (patch from 
	Mohammed Waleed Kadous <waleed@cse.unsw.edu.au>)

2003-06-18 2003-04-06  Arvind Samptur <arvind.samptur@wipro.com>

        * esdlib.c: (esd_open_sound) : waitpid() could fail due to
        a interrupted system call, loop till you succeed (bug #110099).

2003-06-18  Frederic Crozat  <fcrozat@mandrakesoft.com>

	* acconfig.h:
	* audio.c:
	* audio_coreaudio.c: (PlaybackIOProc), (RecordIOProc),
	(esd_audio_devices), (esd_audio_open), (esd_audio_close),
	(esd_audio_pause), (esd_audio_write), (esd_audio_read),
	(esd_audio_flush):
	* configure.in:
	* esdlib.c: (esd_open_sound):
	Mac OS X CoreAudio (bug #107842, patch from Masanori Sekino
	<msek@users.sourceforge.net>)

2003-06-18  Frederic Crozat  <fcrozat@mandrakesoft.com>

	Cygwin support (bug #110916, patch from Masahiro Sakai 
        <s01397ms@sfc.keio.ac.jp>
	* configure.in (AC_LIBTOOL_WIN32_DLL): call AC_LIBTOOL_WIN32_DLL,
	which is necessary for building DLL on win32 platform.
	* Makefile.am (libesd_la_LDFLAGS): add -no-undefined to declare that
	libesd's dependencies provide all symbols that are undefined in
	libesd. This is also necessary for building DLL on win32 platform.
	* .cvsignore: quiet cvs !

2003-06-07  Kjartan Maraas  <kmaraas@gnome.org>

	* esdlib.c: Fix a typo in a comment.

2003-03-20  Frederic Crozat  <fcrozat@mandrakesoft.com>

	* audio_alsa09.c: fix license, it is LGPL, not GPL (bug #108799).
	(patch from Santiago Otero <siryurian@terra.es>)

2003-02-24  Stanislav Brabec  <sbrabec@suse.cz>

	* docs/esd.1.in, esd.c: Updated man page, typo fix.

2002-12-05  Stanislav Brabec  <sbrabec@suse.cz>

	* audio_alsa09.c: Limit maximum periods to 64 (bug #100125).
	Prevents drop-outs for hardware allowing low period_size.

2002-08-26  Frederic Crozat  <fcrozat@mandrakesoft.com>

	* configure.in: Release 0.2.29

2002-08-26  Frederic Crozat  <fcrozat@mandrakesoft.com>
